# topological-montecarlo-localization

./: README.md  dependencies.rosinstall
amcl_sewer/: CMakeLists.txt  README.md  package.xml  stats.txt  stats_experiment_2.txt  traj_11_new.txt  traj_complete.txt
amcl_sewer/launch/: amcl3d.rviz  amcl_2.rviz  amcl_av_pearson.launch  amcl_bag.launch  amcl_bag_fused.launch  amcl_bag_ground_truth.launch  amcl_bag_ground_truth_arsi.launch  amcl_bag_labeler.launch  amcl_bag_no_vo.launch  amcl_bag_vo.launch  amcl_barcelona.launch  amcl_base_station.launch  amcl_base_station.rviz  amcl_experiment_1.launch  amcl_experiment_2.launch  amcl_experiment_upo.launch  amcl_garcia_faria.launch  amcl_pedralbes.launch  amcl_pure.rviz  amcl_realtime.launch  amcl_test.launch  amcl_test.rviz  amcl_virrei_amat.launch
amcl_sewer/matlab/: bplot.m  cellboxplot.m  cellbplot.m  draw_errorbars.m  draw_gas_plots.m  load_stats_localization.m  represent_arrow.m  setLabelStyle.m  setStyle.m  suplabel.m  textUAV.m
amcl_sewer/msg/: Localization.msg
amcl_sewer/python/: draw_bars_n.py  draw_errors.py  draw_errors_n.py
amcl_sewer/scripts/: demo_full_track.sh  demo_full_track_orb.sh  experiment_full_track_23_sept.sh  experiment_full_track_23_sept_orb.sh  experiment_full_track_vo_vs_wheel.sh  experiments_10.sh  experiments_10_odom.sh  experiments_11.sh  ground_truth_amat_27_jun.sh  ground_truth_amat_28_jun.sh  ground_truth_amat_demo_1.sh  ground_truth_amat_demo_2.sh  ground_truth_amat_demo_3.sh  ground_truth_amat_demo_4.sh  ground_truth_mercat_born_11_oct.sh  ground_truth_mercat_born_17_oct.sh  ground_truth_mercat_born_21_sep.sh  ground_truth_mercat_born_arsi_1.sh  ground_truth_mercat_born_arsi_2.sh  ground_truth_mercat_born_arsi_3.sh  ground_truth_pedralbes_12_jun.sh  ground_truth_pedralbes_12_jun_b.sh  ground_truth_pedralbes_16_may_complete.sh  localization_final_demo.sh  run_ground_truth.bash  sensor_final_demo_detector.bash  sensor_final_demo_no_estimation_no_vo.bash  sensor_final_demo_no_estimation_vo.bash  sensor_mercat_born_11_oct.sh  sensor_mercat_born_11_oct_detector.sh  sensor_mercat_born_11_oct_no_estimation.bash  sensor_mercat_born_11_oct_no_estimation_no_vo.bash  sensor_mercat_born_11_oct_no_vo.bash  sensor_mercat_born_11_oct_no_vo.sh  sensor_pedralbes_b_detector.bash  test_orientation_11.sh
amcl_sewer/src/: .kdev_include_paths  amcl_node.cpp  particlefilter_sewer.hpp  particlefilter_sewer_fuse_odometry.hpp
localization_siar/: CMakeLists.txt  package.xml
manhole_detector/: CMakeLists.txt  README.md  package.xml
manhole_detector/launch/: test.launch
manhole_detector/msg/: Manhole.msg
manhole_detector/scripts/: cnn_detector.py  fake_detector.py  fake_detector_plus_labeler.py  ground_truth.py  joy_detector_feeder.py
manhole_detector/src/: generate_dataset_learning.cpp  uncompress_depth_images.cpp
manhole_detector/test/: ground_truth_input_vector_simple  input_vector_2017-01-17-10  input_vector_2017-01-17-10_ground_truth  input_vector_2017-01-17-10_ground_truth_v2  input_vector_2017-01-17-10_v2  input_vector_2017-01-17-11  input_vector_2017-01-17-11_ground_truth  input_vector_2017-01-17-11_v2  input_vector_2017-10-17-10-12-16  model.10-0.9861-0.9578.hdf5  model.29-1.00-0.98.hdf5
sensor_sims/: CMakeLists.txt  package.xml
sensor_sims/launch/: 2_images_to_scan.launch  gmapping_bag.launch  maps_fix.launch
sensor_sims/scripts/: get_bags.bash  sensor_mercat_born_11_oct.sh  sensor_mercat_born_11_oct_detector.sh  sensor_mercat_born_11_oct_no_detector.bash  sensor_mercat_born_17_oct_detector.sh  sensor_mercat_born_17_oct_detector_fused.sh  sensor_mercat_born_17_oct_detector_vo.sh  sensor_pedralbes_b_detector.bash  sensor_pedralbes_b_gmapping.bash
sewer_graph/: CMakeLists.txt  README.md  package.xml
sewer_graph/include/sewer_graph/: .kdev_include_paths  config.h  earthlocation.h  general.h  sewer_graph.h  test_creationclass.h  trajectory.h
sewer_graph/src/: earthlocation.cpp  general.cpp  sewer_graph.cpp  test_creationclass.cpp  trajectory.cpp
sewer_graph/src/exec/: dxf_to_sewer_graph.cpp  get_results.cpp  local2global.cpp  represent_local_trajectory.cpp  test_earth_location.cpp  test_sewer_graph.cpp
sewer_graph/test/: FlightPlan1  Pg_Garcia_Faria.graph  Pg_Garcia_Faria_sections.graph  a  av_pearson_graph  center1  cosa.kml  gis_graph  gis_graph_complete  gis_graph_reduced  gis_graph_reduced.kml  gis_graph_reduced_copy  gis_graph_reduced_fake  gis_graph_reduced_sections  pedralbes_alternative  pedralbes_graph  pedralbes_graph_reduced  pedralbes_graph_reduced_2  pl_virrey_amat_graph  pl_virrey_amat_graph_mh  pl_virrey_amat_graph_simple  sewer_graph  sewer_graph.kml  sewer_graph_copy_2  sewer_graph~  sol_baix_graph  upo_graph  upo_graph_c.kml  upo_graph_complex
simple_graph/: CMakeLists.txt  package.xml
simple_graph/include/simple_graph/: SimpleGraph.h  SimpleVertex.h
simple_graph/src/: test.cpp
topological-montecarlo-localization/: CMakeLists.txt
wall_detector/: CMakeLists.txt  package.xml
wall_detector/include/wall_detector/: wall_detector.hpp
wall_detector/launch/: wall.perspective  wall.rviz  wall_detection.launch
wall_detector/src/: test_wall_detector.cpp
