<?xml version="1.0"?>
<package>
  <name>manhole_detector</name>
  <version>0.1.0</version>
  <description>This package has two scripts for using a CNN trained for manhole detection or to emulate it (with a hand-labeled text file)
    
    It also has a utility for generating training datasets for CNN from hand-labeled text files 
    (which indicates sequence number of the images in which more than half the manhole is visible)
    </description>

  <maintainer email="daletei@upo.es">David Alejo Teissière</maintainer>


  <license>BSD</license>

  <author email="fcaballero@us.es">Fernando Caballero Benitez</author>
  <author email="lmercab@upo.es">Luis Merino Cabañas</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>compressed_depth_image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>functions</build_depend>
  
  <run_depend>functions</run_depend>
   <run_depend>compressed_depth_image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>


</package>
